feat(GUI and functions finished)